[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cobra-tools"
version = "2025.10.16"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = "==3.11.*"
dependencies = [
    "imageio~=2.26.0",
    "numpy~=1.22",
    "pillow>=10.0.1",
    "bitarray~=2.9.2",
]
optional-dependencies.gui = [
    "PyQt5~=5.15.4",
    "PyQt5-Frameless-Window~=0.2.8",
    "vdf~=3.4",
]
optional-dependencies.manis_tool_gui = [
    "matplotlib~=3.10.3",
]
optional-dependencies.dev = [
    "pre-commit~=3.8.0",
    "pytest~=8.3.3",
    "pytest-qt~=4.4.0",
]
optional-dependencies.doc = [
    "mkdocs~=1.6.1",
    "mkdocs-material~=9.5.34",
    "mkdocs-literate-nav~=0.6.1",
    "mkdocs-glightbox~=0.4.0",
    "mkdocs-git-revision-date-localized-plugin~=1.2.8",
    "mkdocs-git-committers-plugin-2~=2.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["*"] # empty package for now

[tool.pytest.ini_options]
log_cli_format = '%(levelname)s | %(message)s'
log_cli_level = 'DEBUG'
log_file = 'logs/pytest.log'
log_file_format = '%(levelname)s | %(message)s'
qt_api = 'pyqt5'
